<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/SORT"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/DEAULT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/circlebox"

            android:gravity="center_horizontal|center_vertical"
            android:text="@string/DEFAULT"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/ATK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/circlebox"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ATK"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/DEF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/circlebox"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/DEF"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/SPD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/circlebox"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/SPD"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

</androidx.constraintlayout.widget.ConstraintLayout>