<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/NORMAL"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/back"
        android:layout_width="405dp"
        android:layout_height="734dp"
        android:background="@color/clicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/insidepokemon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:listitem="@layout/typeofpokemon" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ID"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/insidepokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <ImageView
        android:id="@+id/insideHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/heart"
        app:layout_constraintBottom_toTopOf="@+id/insidepokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toEndOf="@+id/id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/pokemonpic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Pokemon"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insidepokemon"
        app:layout_constraintVertical_bias="0.206"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toEndOf="@+id/pokemonpic"
        app:layout_constraintTop_toBottomOf="@+id/insidepokemon"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/right" />

    <ImageView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/pokemonpic"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insidepokemon"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/left" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="415dp"
        android:layout_height="410dp"
        android:layout_marginTop="320dp"
        android:background="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/SPDNUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/num"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/spd"
                app:layout_constraintTop_toBottomOf="@+id/DEFNUM" />

            <TextView
                android:id="@+id/spd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SPD"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/def"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/DEFNUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/num"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/def"
                app:layout_constraintTop_toBottomOf="@+id/ATKNUM" />

            <TextView
                android:id="@+id/def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/DEF"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hp"
                app:layout_constraintVertical_bias="0.474" />

            <TextView
                android:id="@+id/ATKNUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/num"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/atk"
                app:layout_constraintTop_toBottomOf="@+id/hpNum" />

            <TextView
                android:id="@+id/hpNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/num"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toEndOf="@+id/hp"
                app:layout_constraintTop_toBottomOf="@+id/totalNum" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="56dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xdes" />

            <TextView
                android:id="@+id/TOTAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TOTAL"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.123" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/WEIGHT"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toEndOf="@+id/heightNum"
                app:layout_constraintTop_toBottomOf="@+id/xdes" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/xdes"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/xdesc"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19" />

            <TextView
                android:id="@+id/HEIGHT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/HEIGHT"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xdes"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/heightNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/num"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.006"
                app:layout_constraintStart_toEndOf="@+id/HEIGHT"
                app:layout_constraintTop_toBottomOf="@+id/xdes" />

            <TextView
                android:id="@+id/totalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/num"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintStart_toEndOf="@+id/TOTAL"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.076" />

            <TextView
                android:id="@+id/weightNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/num"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/weight"
                app:layout_constraintTop_toBottomOf="@+id/xdes"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HP"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TOTAL"
                app:layout_constraintVertical_bias="0.019" />

            <TextView
                android:id="@+id/atk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ATK"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hp"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>