<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/pokemonBack"
            android:layout_width="180dp"
            android:layout_height="123dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/NORMAL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pokemon"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toTopOf="@+id/pokemonBack"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintVertical_bias="0.076" />

        <TextView
            android:id="@+id/defWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEF"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toBottomOf="@+id/atkWD" />

        <TextView
            android:id="@+id/atkWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ATK"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toBottomOf="@+id/Id"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/spdWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SPD"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toBottomOf="@+id/defWD"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/atkNUM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toEndOf="@+id/atkWD"
            app:layout_constraintTop_toTopOf="@+id/pokemonBack"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/defNUM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toEndOf="@+id/defWD"
            app:layout_constraintTop_toBottomOf="@+id/atkNUM" />

        <TextView
            android:id="@+id/spdNUM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/spdWD"
            app:layout_constraintTop_toBottomOf="@+id/defNUM"
            app:layout_constraintVertical_bias="0.1" />

        <ImageView
            android:id="@+id/pokemonPic"
            android:layout_width="82dp"
            android:layout_height="67dp"
            android:contentDescription="@string/Pokemon"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toTopOf="@+id/pokemonBack"
            app:layout_constraintVertical_bias="0.553"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/heart"
            app:layout_constraintBottom_toBottomOf="@+id/pokemonBack"
            app:layout_constraintEnd_toEndOf="@+id/pokemonBack"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="@+id/pokemonBack"
            app:layout_constraintTop_toTopOf="@+id/pokemonBack"
            app:layout_constraintVertical_bias="0.06"
            app:srcCompat="@drawable/heart" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>